Enhance InfoController and related files: add search functionality with TextField, update arrival time display, and improve GtfsReaderExampleMain URL handling